--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "andrewdanilov/yii2-helpers",
     "description": "Various helpers",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","helpers","datepicker","ckeditor"],
+    "keywords": ["yii2","extension","helpers","datepicker","ckeditor","nested","category","object","prises","text"],
     "license": "MIT",
     "authors": [
         {
@@ -12,8 +12,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "yiisoft/yii2": "~2.0.0",
-        "andrewdanilov/yii2-behaviors": "~1.0.0"
+        "yiisoft/yii2": "^2.0.0"
     },
     "autoload": {
         "psr-4": {
